--- a/terserah.html
+++ b/terserah.html
@@ -10,6 +10,7 @@
             zahra
             <h1>
                 zahra sekolah di smk 13 bdg
+                zahra anak ke 5 dari 6 bersaudara
             </h1>
         </p>
     </body>
