--- a/terserah.html
+++ b/terserah.html
@@ -11,6 +11,7 @@
             <h1>
                 zahra sekolah di smk 13 bdg
                 zahra anak ke 5 dari 6 bersaudara
+                zahra pkl bersama cinta dan wulan
             </h1>
         </p>
     </body>
